feat: using iframe to display pdf to prevent mobile can't embed pdf

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="vw-100 vh-100">
-  <embed
-    src="aaron-yang-software-engineer-resume-en.pdf"
-    type="application/pdf"
-    class="h-100 w-100"
-  />
+  <iframe
+    src="./aaron-yang-software-engineer-resume-en.pdf"
+    class="w-100 h-100"
+    frameborder="0"
+  ></iframe>
 </div>
